; ModuleID = '/home/carl/AnghaBench/torch7/extr_utils.c_torch_isatty.c'
source_filename = "/home/carl/AnghaBench/torch7/extr_utils.c_torch_isatty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_FILEHANDLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @torch_isatty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @torch_isatty(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32**, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @LUA_FILEHANDLE, align 4
  %6 = call i64 @luaL_checkudata(i32* %4, i32 -1, i32 %5)
  %7 = inttoptr i64 %6 to i32**
  store i32** %7, i32*** %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = load i32**, i32*** %3, align 8
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @fileno(i32* %10)
  %12 = call i32 @isatty(i32 %11)
  %13 = call i32 @lua_pushboolean(i32* %8, i32 %12)
  ret i32 1
}

declare dso_local i64 @luaL_checkudata(i32*, i32, i32) #1

declare dso_local i32 @lua_pushboolean(i32*, i32) #1

declare dso_local i32 @isatty(i32) #1

declare dso_local i32 @fileno(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
